Added `getFunctions` method to `Agent`
- `Agent`: added `getFunctions` method to retrieve all loaded functions.
- Added class `FnOParameter`, a subclass of `Parameter` which holds a resource URI and a return type URI. Each parameter
  of a function provided by the `FnOFunctionModelProvider` is now an instance of `FnOParameter`.